force-app/main/default/objects/TipoUnidade__c/TipoUnidade__c.object-meta.xml
<CustomObject>
    <description>Registro para agrupamento de Unidades com características homogêneas, como preço e dimensões</description>
    <label>Tipo de Unidade</label>
    <nameField>
        <label>Nome do Tipo de Unidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipo de Unidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>