force-app/main/default/objects/TipoUnidade__c/fields/AreaTotal__c.field-meta.xml
<CustomField>
    <fullName>AreaTotal__c</fullName>
    <label>Área Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>