force-app/main/default/objects/TipoUnidade__c/fields/TipoRegistroUnidades__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistroUnidades__c</fullName>
    <label>Tipo de registro das Unidades</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartamento</fullName>
            </value>
            <value>
                <fullName>Vaga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>