force-app/main/default/objects/TipoUnidade__c/fields/VagasDeficientes__c.field-meta.xml
<CustomField>
    <fullName>VagasDeficientes__c</fullName>
    <label>Vagas para deficiêntes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>